--- a/kafka_catcher/goodwin_catcher/templates/goodwin_catcher/support.html
+++ b/kafka_catcher/goodwin_catcher/templates/goodwin_catcher/support.html
@@ -5,7 +5,16 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
-            тут буде форма для відправки листа
+
+            <img src="{{images.letter}}" usemap="#m"/><a
+                href="mailto:tatarenko.roman@gmail.com"
+                style="color:gray;">
+            Напишіть мені листа </a>
+
+            <map name="m">
+                <area shape="rect" coords="0,4,4,4,">
+            </map>
+
         </div>
     </div>
 
